# KWS-HTTP-Server

./: .gitignore  CMakeLists.txt  file.cpp  main.cpp  readme.md  threadsafequeue.h
core/: CMakeLists.txt
core/logger/: logger.cpp  logger.h
core/thread/: threadpool.cpp  threadpool.h  threadsafequeue.h
example/: CMakeLists.txt
example/src/: main.cpp
include/: kwserver.h
src/: CMakeLists.txt  kwserver.cpp
src/core/: CMakeLists.txt
src/core/filesystem/: filesystem.h
src/core/logger/: logger.h
src/core/thread/: threadpool.cpp  threadsafequeue.h
src/netcore/: netcore.h
src/platform/: kwserver_posix.cpp  kwserver_posix.h
